@@ -5,6 +5,9 @@ CHANGES
 3.8.2 (unreleased)
 ------------------
 
+- LP #98437: use mechanize's built-in ``submit()`` to submit forms, allowing
+  mechanize to set the "Referer:" (sic) header appropriately.
+
 - LP #568806: Update dependency ``mechanize >= 0.2.0``, which now includes
   the ``ClientForm`` APIs.
 
